--- a/src/gui/login.kv
+++ b/src/gui/login.kv
@@ -1,5 +1,3 @@
-
-
 <LoginWidget>:
     canvas.before:
         Color:
@@ -17,6 +15,7 @@
         pos_hint: {"center_x": .5, "center_y": .55}
         size_hint: .25, .07
         text: "name"
+        multiline: False
 
     TextInput:
         id: case
